--- a/index.html
+++ b/index.html
@@ -4,9 +4,85 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Learning HTML" />
     <title>Testing_ground</title>
+    <style>
+      section {
+        display: block;
+      }
+    </style>
   </head>
   <body>
+    <!-- try to
+       comment -->
     <h1>Hello world!</h1>
+    <ol>
+      <li><a href="#figure">Figure</a></li>
+      <li>Next</li>
+      <li>Next one more time</li>
+    </ol>
+    <a
+      href="https://google.com"
+      target="_self"
+      title="Google search"
+      class="link"
+      >Google_it</a
+    >
+    <a
+      href="https://google.com"
+      target="_blank"
+      rel="noreferrer noopener"
+      title="Google search"
+      >Google_it</a
+    >
+    <a href="https://i.imgur.com/AD3MbBi.jpeg" download="Catty">Download_it</a>
+    <!-- <br /> -->
+    <section>
+      WWF The World Wide Fund for Nature (WWF) is an international organization
+      working on issues regarding the conservation, research and restoration of
+      the environment, formerly named the World Wildlife Fund. WWF was founded
+      in 1961.
+    </section>
+    <img
+      src="https://i.imgur.com/AD3MbBi.jpeg"
+      alt="cat_with_cash"
+      width="300"
+    />
+    <form>
+      <input type="text" name="user_name" placeholder="Your_name" />
+      <input type="submit" />
+      <input type="password" name="pass" placeholder="Your_pass" />
+    </form>
+    <br />
+    <button type="submit">Press_it</button>
+    <button type="button"><span>Simple </span>Button</button>
+    <p class="text">Paragraph</p>
+    <p>All rights reserved &copy; Lex, 2020</p>
+    <p>For semibold choose text with &lt;strong&gt; і &lt;/strong&gt;.</p>
+    <article>
+      <h2>Article title</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
+        veniam alias at rerum voluptatem, tempore fuga cum sed minima rem eum
+        numquam culpa delectus quaerat nulla reprehenderit! <br />
+        o'er
+      </p>
+    </article>
+    <p>
+      <a href="https://squoosh.app/">Squoosh</a> - service for
+      <em>optimization</em> of images.
+    </p>
+    <ul>
+      <li>One</li>
+      <li>Two</li>
+      <li>Three</li>
+    </ul>
+    <figure id="figure">
+      <a href="https://google.com" alt="google_search"
+        ><img src="Ct50Y0i.jpeg" alt="angry_cat" width="300"
+      /></a>
+      <figcaption>Custom_name</figcaption>
+      <abbr>COD</abbr>
+    </figure>
   </body>
 </html>
