--- a/index.html
+++ b/index.html
@@ -16,11 +16,21 @@
     <!-- try to
        comment -->
     <h1>Hello world!</h1>
-    <ol>
-      <li><a href="#figure">Figure</a></li>
-      <li>Next</li>
-      <li>Next one more time</li>
-    </ol>
+    <header>
+      <ul>
+        <li>First</li>
+        <li>Second</li>
+        <li><a href="Link.html">Link</a></li>
+      </ul>
+    </header>
+    <nav>
+      <ol>
+        <li><a href="#figure">Figure</a></li>
+        <li>Next</li>
+        <li>Next one more time</li>
+      </ol>
+    </nav>
+
     <a
       href="https://google.com"
       target="_self"
@@ -72,11 +82,13 @@
       <a href="https://squoosh.app/">Squoosh</a> - service for
       <em>optimization</em> of images.
     </p>
-    <ul>
-      <li>One</li>
-      <li>Two</li>
-      <li>Three</li>
-    </ul>
+    <main>
+      <ul>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+      </ul>
+    </main>
     <figure id="figure">
       <a href="https://google.com" alt="google_search"
         ><img src="Ct50Y0i.jpeg" alt="angry_cat" width="300"
@@ -84,5 +96,16 @@
       <figcaption>Custom_name</figcaption>
       <abbr>COD</abbr>
     </figure>
+    <footer>
+      <!-- Копірайт -->
+      <p>All rigts reserved &copy</p>
+
+      <!-- Посилання на соцмережі -->
+      <ul>
+        <li><a href="">Facebook</a></li>
+        <li><a href="">Twitter</a></li>
+        <li><a href="">Instagram</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
